<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/background_title"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/primary_600" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/app_name"
            android:textColor="@color/secondary_900"
            android:textSize="34sp"
            android:padding="10dp"/>

    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rl_header"
        android:fillViewport="true">
    <LinearLayout

        android:id="@+id/ll_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_header"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
       >

        <TextView
            android:text="@string/register_label"
            android:textSize="24sp"
            android:fontFamily="@font/quicksand_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="70dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_semi_bold"
                android:text="@string/name_text"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/rounded_background"
                android:drawableTint="@color/primary_600"
                android:fontFamily="@font/quicksand_semi_bold"
                android:hint="@string/hint_name"
                android:paddingLeft="12dp"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_semi_bold"
                    android:text="@string/gender_text"
                    android:textSize="18sp" />

                <RadioGroup
                    android:id="@+id/rdigroupDegree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rdnam"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:checked="true"
                        android:text="Nam"
                        android:textSize="18dp" />

                    <RadioButton
                        android:id="@+id/rdnu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="Nữ"
                        android:textSize="18dp" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="vertical">


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_semi_bold"
                android:text="@string/phone_text"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edt_phone"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/rounded_background"
                android:drawableTint="@color/primary_600"
                android:fontFamily="@font/quicksand_semi_bold"
                android:hint="@string/hint_phone"
                android:inputType="number"
                android:paddingLeft="12dp"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_semi_bold"
                android:text="@string/email_text"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/rounded_background"
                android:drawableTint="@color/primary_600"
                android:fontFamily="@font/quicksand_semi_bold"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:paddingLeft="12dp"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_semi_bold"
                android:text="Tài Khoản"
                android:textSize="18sp" />
            <EditText
                android:id="@+id/edt_username"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/rounded_background"
                android:drawableTint="@color/primary_600"
                android:fontFamily="@font/quicksand_semi_bold"
                android:hint="VD: hoanghm"
                android:paddingLeft="12dp"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_semi_bold"
                android:text="@string/pass_label"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edt_pass"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/rounded_background"
                android:drawableEnd="@drawable/eye"
                android:fontFamily="@font/quicksand_semi_bold"
                android:hint="@string/pass_hint"
                android:inputType="textPassword"
                android:paddingLeft="12dp"
                android:textSize="18sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_semi_bold"
                android:text="Nhập lại mật khẩu"
                android:textSize="18sp" />
            <EditText
                android:id="@+id/edt_passcomfirm"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/rounded_background"
                android:drawableEnd="@drawable/eye"
                android:fontFamily="@font/quicksand_semi_bold"
                android:hint="@string/pass_hint"
                android:inputType="textPassword"
                android:paddingLeft="12dp"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/primary_600"
        android:fontFamily="@font/quicksand_semi_bold"
        android:minHeight="48dp"
        android:paddingHorizontal="32dp"
        android:text="@string/register"
        android:textColor="@color/secondary_900"
        android:textSize="16sp" />
</RelativeLayout>