<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_300">

    <!-- Header -->
    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_background"
        android:backgroundTint="@color/primary_600"
        android:elevation="4dp">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:fontFamily="@font/quicksand_bold"
            android:text="Cập nhật thông tin"
            android:textColor="@color/secondary_900"
            android:textSize="26sp"
            android:padding="10dp" />
    </RelativeLayout>

    <!-- Scrollable Content -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_header"
        android:layout_above="@id/rl_button">

        <LinearLayout
            android:id="@+id/ll_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="20dp">

            <!-- Name -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_semi_bold"
                    android:text="@string/name_text"
                    android:textSize="16sp"
                    android:textColor="@color/secondary_900" />

                <EditText
                    android:id="@+id/edt_ename"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/rounded_background"
                    android:hint="@string/hint_name"
                    android:paddingLeft="12dp"
                    android:textSize="16sp" />
            </LinearLayout>

            <!-- Gender -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_semi_bold"
                    android:text="@string/gender_text"
                    android:textSize="16sp"
                    android:layout_marginTop="18dp"
                    android:textColor="@color/secondary_900" />

                <RadioGroup
                    android:id="@+id/rd_egroupGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="12dp">

                    <RadioButton
                        android:id="@+id/rd_enam"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Nam"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/rd_enu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Nữ"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:layout_marginStart="16dp" />
                </RadioGroup>
            </LinearLayout>

            <!-- Phone -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_semi_bold"
                    android:text="@string/phone_text"
                    android:textSize="16sp"
                    android:textColor="@color/secondary_900" />

                <EditText
                    android:id="@+id/edt_ephone"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/rounded_background"
                    android:hint="@string/hint_phone"
                    android:inputType="number"
                    android:paddingLeft="12dp"
                    android:textSize="16sp" />
            </LinearLayout>

            <!-- Email -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_semi_bold"
                    android:text="@string/email_text"
                    android:textSize="16sp"
                    android:textColor="@color/secondary_900" />

                <EditText
                    android:id="@+id/edt_eemail"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/rounded_background"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="12dp"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/rl_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingHorizontal="32dp"
        android:padding="20dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_eSaveCustomer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary_600"
            android:fontFamily="@font/quicksand_semi_bold"
            android:minHeight="48dp"
            android:layout_marginLeft="80dp"
            android:text="Lưu"
            android:textColor="@color/secondary_900"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_eClearCustomer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary_600"
            android:fontFamily="@font/quicksand_semi_bold"
            android:minHeight="48dp"
            android:layout_marginLeft="40dp"
            android:text="Xóa"
            android:textColor="@color/secondary_900"
            android:textSize="16sp" />
    </LinearLayout>
</RelativeLayout>